--- a/content_builder/src/html/themes/base/CreateSubDomainComponent.html
+++ b/content_builder/src/html/themes/base/CreateSubDomainComponent.html
@@ -48,12 +48,12 @@
                                     </div>
                                 </div>
                                 <div class="classes.domain_video_container">
-                                    <iframe class="classes.domain_video" width="100%" height="100%" src="https://www.youtube.com/embed/iI3lseGchvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe class="classes.domain_video" width="100%" height="100%" data-component-props="src={this.props.video1_url}" frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/iI3lseGchvE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                                 <div class="classes.domain_credit_container" data-component-value="{this.props.payWallContent}">
                                     
                                 </div>
-                                <div style="width: 304px; height: 78px; margin-left: auto; margin-right: auto;"><div><iframe src="https://www.google.com/recaptcha/api2/anchor?k=6LcpLUMUAAAAAGV8aRWtuHeKs82QZ3vNGp2BDgUE&amp;co=aHR0cDovL29yaWdpbmJldGEubmV0Ojgw&amp;hl=en&amp;type=image&amp;v=v1520231465640&amp;theme=light&amp;size=normal&amp;badge=bottomright&amp;cb=x0pg9v1hmd4p" width="304" height="78" role="presentation" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid #c1c1c1; margin: 10px 25px; padding: 0px; resize: none;  display: none; "></textarea></div>
+                                <div style="width: 304px; height: 78px; margin-left: auto; margin-right: auto;">
                                 <div data-component-value="{this.props.submitButton}">
                                 </div>
                             </div>
