--- a/content_builder/src/html/themes/enigma2/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationPageComponent.html
@@ -39,7 +39,7 @@
                       <div id="media_container" data-component-value="{this.props.mediaContent}">MEDIA</div>
                       <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:0px;padding-bottom:0px;">
                       </div>
-                      <footer class="classes.felzec_darkFooter" data-component-props="style={this.props.felzec_footer_style}">
+                      <footer class="classes.enigma2_darkFooter" data-component-props="style={this.props.felzec_footer_style}" style="position:relative;">
                         <div data-component-value="{this.props.footerContent}">Nav</div>
                       </footer>
                 </div>
