--- a/content_builder/src/html/themes/enigma2/dark/OrganizationNewsComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationNewsComponent.html
@@ -23,17 +23,17 @@
    <body>
       <div data-component-name="dark_OrganizationNewsComponent">
         <div class="classes.felzec_light_news_row">
-            <div class="classes.felzec_light_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog);}}">
+            <div class="classes.enigma2_light_news_container" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog);}}">
                 <div class="ui stackable two column grid">
                     <div class="six wide column">
                         <img class="classes.felzec_main_news_item_micro_image" data-component-props="src={this.props.blog_media}" src="../images/news_mini_image.jpg" />
                     </div>
                     <div class="ten wide column">
                         <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                            <span class="classes.felzec_light_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
+                            <span class="classes.enigma2_light_news_title" data-component-value="{this.props.blog_title}">We are live with a very long title</span>
                         </div>
                         <div style="width: 100%;height: 140px; overflow-y: hidden;text-overflow: ellipsis;">
-                            <span class="classes.felzec_light_news_body" data-component-value="{this.props.blog_content}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
+                            <span class="classes.enigma2_light_news_body" data-component-value="{this.props.blog_content}">We are exited to announce the launch of Ascendant Gaming.  Please follow us on our social media channels to stay up to date on competitions and events.</span>
                         </div>
                     </div>
                 </div>
