Allow domain change

--- a/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminProfileComponent.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="classes.admin_main_logo_spacer"></div>
                     <div class="ui fluid input">
-                        <input data-component-props="value={this.props.custom_domain_value} onChange={(e)=>{this.props.handleChange('custom_domain_value', e);}}"  type="text" placeholder="Custom Domain">
+                        <input data-component-props="value={this.props.sub_domain_value} onChange={(e)=>{this.props.handleChange('current_sub_domain', e);}}"  type="text" placeholder="Sub Domain">
                     </div>
                     <div class="classes.admin_main_logo_spacer"></div>
                     <div class="ui fluid input">
