--- a/content_builder/src/html/themes/enigma2/dark/OrganizationMediaComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationMediaComponent.html
@@ -22,11 +22,11 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="dark_OrganizationMediaComponent"  class="classes.felzec_matches_container">
-            <div class="classes.enigma2_matches_container" data-component-props="style={this.props.bg_style}">
+        <div data-component-name="dark_OrganizationMediaComponent"  class="classes.e2_media_container">
+            <div class="classes.enigma2_media_container" data-component-props="style={this.props.bg_style}">
             </div>
-            <div class="classes.enigma2_matches_filter_container" data-component-props="style={this.props.filter_style}"></div>
-            <div class="classes.enigma2_matches_inner_container">
+            <div class="classes.enigma2_media_filter_container" data-component-props="style={this.props.filter_style}"></div>
+            <div class="classes.enigma2_media_inner_container">
                 <div class="ui stackable three column grid" style="padding:0px">
                     <div class="five wide column">
                         <div class="classes.enigma2_switch_matches_title" data-component-props="style={this.props.switch_title_color}">STREAMS.</div>
