--- a/content_builder/src/html/themes/enigma2/dark/OrganizationYouTubeComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationYouTubeComponent.html
@@ -23,8 +23,8 @@
    </head>
    <body>
         <div data-component-name="dark_OrganizationYouTubeComponent"  style="display:inline-block;margin-right:15px">
-            <div class="classes.enigma2_dark_video_container">
-                <iframe title="ifr" width="584px" height="325px" data-component-props="allowFullScreen src={this.props.video_url}" src="https://www.youtube.com/embed/rh8HEF63rx4" frameborder="0" allowfullscreen=""></iframe>
+            <div class="classes.felzec_light_video_container">
+                <iframe title="ifr" width="426px" height="240pxpx" data-component-props="allowFullScreen src={this.props.video_url}" src="https://www.youtube.com/embed/rh8HEF63rx4" frameborder="0" allowfullscreen=""></iframe>
             </div>
         </div>
    </body>
