fixed nav finctionality for new theme

--- a/content_builder/src/html/themes/enigma2/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationNavComponent.html
@@ -32,11 +32,11 @@
                 <div class="ten wide column" style="padding:0px;display:flex;justify-content:center;">
                     <div class="classes.obliviot_org_menu_light_container">
                         <div id="menu_login" class="classes.org_menu_enigma2_light_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
-                        <div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_enigma2_light_item">Store</div></a>
-                        <div id="sponsers_button" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_enigma2_light_item">Sponsors</div></a>
-                        <div id="news_button" data-component-props="style={this.props.news_style} onClick={this.props.handleViewBlogClick}" class="classes.org_menu_enigma2_light_item">News</div></a>
-                        <div id="about_button" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_enigma2_light_item">About</div></a>
-                        <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}"  class="classes.org_menu_enigma2_light_item">Home</div></a>
+                        <div id="menu_news" data-component-props="style={this.props.enigma2_store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_enigma2_light_item">Store</div></a>
+                        <div id="sponsers_button" data-component-props="style={this.props.enigma2_sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_enigma2_light_item">Sponsors</div></a>
+                        <div id="news_button" data-component-props="style={this.props.enigma2_news_style} onClick={this.props.handleViewBlogClick}" class="classes.org_menu_enigma2_light_item">News</div></a>
+                        <div id="about_button" data-component-props="style={this.props.enigma2_about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_enigma2_light_item">About</div></a>
+                        <div id="menu_home" data-component-props="style={this.props.enigma2_home_style} onClick={this.props.handleHomeClick}" class="classes.org_menu_enigma2_light_item">Home</div></a>
                     </div>
                 </div>
                 <div class="three wide column" style="padding:0px">
