remove jumbptron from enigma2 and felzec themes

--- a/content_builder/src/html/themes/enigma2/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationNavComponent.html
@@ -29,7 +29,7 @@
                         <img class="classes.enigma2_darkLogo" data-component-props="src={this.props.image_src}" src="../images/disrupt_logo.jpg" />
                     </div>
                 </div>
-                <div class="ten wide column" style="padding:0px;display:flex;justify-content:center;">
+                <div class="ten wide column" style="padding:0px;display:flex;justify-content:left;">
                     <div class="classes.obliviot_org_menu_light_container">
                         <div id="menu_login" class="classes.org_menu_enigma2_light_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
                         <div id="menu_news" data-component-props="style={this.props.enigma2_store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_enigma2_light_item">Store</div></a>
