changes to first blog text

--- a/content_builder/src/html/themes/enigma2/dark/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationBlogComponent.html
@@ -32,10 +32,10 @@
                             <div class="classes.enigma2_dark_main_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 50px; overflow-y: hidden;text-overflow: ellipsis;">
-                                        <p class="classes.enigma2_light_news_text" >NEWS</p>
+                                        <p class="classes.enigma2_large_news_text" >NEWS</p>
                                     </div>
                                     <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                        <span class="classes.enigma2_light_news_title" data-component-value="{this.props.blog_title_1}">We are live with a very long title</span>
+                                        <span class="classes.enigma2_large_news_title" data-component-value="{this.props.blog_title_1}">We are live with a very long title</span>
                                     </div>
                                 </div>
                             </div>
@@ -45,10 +45,10 @@
                             <div class="classes.enigma2_dark_main_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 50px; overflow-y: hidden;text-overflow: ellipsis;">
-                                        <p class="classes.enigma2_light_news_text" >NEWS</p>
+                                        <p class="classes.enigma2_large_news_text" >NEWS</p>
                                     </div>
                                     <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                        <span class="classes.enigma2_light_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
+                                        <span class="classes.enigma2_large_news_title" data-component-value="{this.props.blog_title_2}">We are live with a very long title</span>
                                     </div>
                                 </div>
                             </div>
@@ -58,10 +58,10 @@
                             <div class="classes.enigma2_dark_main_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 50px; overflow-y: hidden;text-overflow: ellipsis;">
-                                        <p class="classes.enigma2_light_news_text" >NEWS</p>
+                                        <p class="classes.enigma2_large_news_text" >NEWS</p>
                                     </div>
                                     <div style="width:100%;float:left;padding-right:0px;white-space:nowrap; overflow: hidden;text-overflow: ellipsis;">
-                                        <span class="classes.enigma2_light_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
+                                        <span class="classes.enigma2_large_news_title" data-component-value="{this.props.blog_title_3}">We are live with a very long title</span>
                                     </div>
                                 </div>
                             </div>
