added website by origingg to footer all themes

--- a/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
@@ -62,6 +62,7 @@
                         <div class="classes.orgFooter" data-component-props="style={this.props.footer_style}">
                                 <p  data-component-value="{this.props.copyright}" class="classes.orgFooterText">© Origin. All rights reserved.</p>
                         </div>
+                        <div class="classes.universal_footer_dark">Website by OriginGG</div>
                     </div>
         </div>
    </body>
