--- a/content_builder/src/html/themes/enigma2/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationPageComponent.html
@@ -41,6 +41,7 @@
                       </div>
                       <footer class="classes.enigma2_darkFooter" data-component-props="style={this.props.felzec_footer_style}" style="position:relative;">
                         <div data-component-value="{this.props.footerContent}">Nav</div>
+                        <div class="classes.universal_footer_dark">Website by OriginGG</div>
                       </footer>
                 </div>
             </div>
