--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -41,6 +41,7 @@
                       </div>
                       <footer class="classes.felzec_darkFooter" data-component-props="style={this.props.felzec_footer_style}">
                         <div data-component-value="{this.props.footerContent}">Nav</div>
+                        <div class="classes.universal_footer_dark">Website by OriginGG</div>
                       </footer>
                 </div>
             </div>
