--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -90,6 +90,7 @@
                 <div class="classes.obliviot_orgFooter">
                     <p class="classes.obliviot_orgFooterText">© Origin. All rights reserved.</p>
                 </div>
+                <div class="classes.universal_footer_dark">Website by OriginGG</div>
             </div>
         </div>
    </body>
