--- a/content_builder/src/html/themes/base/CredentialsComponent.html
+++ b/content_builder/src/html/themes/base/CredentialsComponent.html
@@ -21,7 +21,7 @@
       </script>    
    </head>
    <body>
-      <div data-component-name="SignupPageComponent" class="classes.signupBGImage">
+      <div data-component-name="CredentialsComponent" class="classes.signupBGImage">
          <header class="classes.signupHeader">
             <div class="ui container">
                 <a href="/" class="header item" data-component-value="{this.props.headerComponent}">
