fixed issue with enigma1 sponsor bar

--- a/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
@@ -25,7 +25,7 @@
         <div class="classes.fixed_div">
                 <div data-component-name="dark_OrganizationPageComponent" class="classes.darkMainBG">
                         <div class="classes.dark_pageTestContraint">
-                            <header class='classes.darkHeader'>
+                            <header class='classes.newDarkHeader'>
                                 <div id="dark_header">
                                     <div data-component-value="{this.props.topSponsorContent}">News</div>
                                 </div>
