--- a/content_builder/src/html/themes/enigma/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationPageComponent.html
@@ -25,7 +25,7 @@
         <div class="classes.fixed_div">
                 <div data-component-name="obliviot_OrganizationPageComponent" class="classes.obliviotMainBG">
                         <div class="classes.obliviot_pageTestContraint">
-                            <header class='classes.obliviotHeader'>
+                            <header class='classes.newObliviotHeader'>
                                 <div id="obliviot_header">
                                     <div data-component-value="{this.props.topSponsorContent}">News</div>
                                 </div>
