--- a/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
@@ -58,6 +58,7 @@
                                         <div data-component-value="{this.props.videoContent}">News</div>
                                 </div>
                             </div>
+                            <div data-component-value="{this.props.emailContent}" id="email_component">email</div>
                         </div>
                         <div class="classes.orgFooter" data-component-props="style={this.props.footer_style}">
                                 <p  data-component-value="{this.props.copyright}" class="classes.orgFooterText">© Origin. All rights reserved.</p>
