--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -39,6 +39,7 @@
                       <div id="media_container" data-component-value="{this.props.mediaContent}">MEDIA</div>
                       <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:0px;padding-bottom:0px;">
                       </div>
+                      <div data-component-value="{this.props.emailContent}" id="email_component">email</div>
                       <footer class="classes.felzec_darkFooter" data-component-props="style={this.props.felzec_footer_style}">
                         <div data-component-value="{this.props.footerContent}">Nav</div>
                         <div class="classes.universal_footer_dark">Website by OriginGG</div>
