--- a/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
@@ -87,6 +87,7 @@
                         <div data-component-value="{this.props.navContent}">Nav</div>
                     </footer>
                 </div>
+                <div data-component-value="{this.props.emailContent}" id="email_component">email</div>
                 <div class="classes.obliviot_orgFooter">
                     <p class="classes.obliviot_orgFooterText">© Origin. All rights reserved.</p>
                 </div>
