--- a/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
@@ -62,6 +62,9 @@
                         </div>
                     </div>
                 </a>
+                 <div data-component-value="{this.props.paywall_content}">
+                    paywall_content
+                </div>
                 <div class="ui inverted accordion">    
                     <div data-component-value="{this.props.dropdown}">
                         <div class="title">Manage<i class="dropdown icon"></i></div>
