--- a/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationPageComponent.html
@@ -63,7 +63,7 @@
                         <div class="classes.orgFooter" data-component-props="style={this.props.footer_style}">
                                 <p  data-component-value="{this.props.copyright}" class="classes.orgFooterText">© Origin. All rights reserved.</p>
                         </div>
-                        <div class="classes.universal_footer_dark">Website by OriginGG</div>
+                        <div class="classes.universal_footer_dark">Website by <span  style="cursor:pointer;margin-left:5px;" data-component-props="onClick={this.props.handleWebClick}">&nbsp;OriginGG</span></div>
                     </div>
         </div>
    </body>
