--- a/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationPageComponent.html
@@ -42,7 +42,7 @@
                       <div data-component-value="{this.props.emailContent}" id="email_component">email</div>
                       <footer class="classes.felzec_darkFooter" data-component-props="style={this.props.felzec_footer_style}">
                         <div data-component-value="{this.props.footerContent}">Nav</div>
-                        <div class="classes.universal_footer_dark">Website by OriginGG</div>
+                        <div class="classes.universal_footer_dark">Website by <span  style="cursor:pointer;margin-left:5px;" data-component-props="onClick={this.props.handleWebClick}">&nbsp;OriginGG</span></div>
                       </footer>
                 </div>
             </div>
