--- a/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
@@ -91,7 +91,7 @@
                 <div class="classes.obliviot_orgFooter">
                     <p class="classes.obliviot_orgFooterText">© Origin. All rights reserved.</p>
                 </div>
-                <div class="classes.universal_footer_dark">Website by OriginGG</div>
+                <div class="classes.universal_footer_dark">Website by <span  style="cursor:pointer;margin-left:5px;" data-component-props="onClick={this.props.handleWebClick}">&nbsp;OriginGG</span></div>
             </div>
         </div>
    </body>
