--- a/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
@@ -33,6 +33,9 @@
                     <div class="classes.menu_title_text">
                         Admin Panel
                     </div>
+                    <a class="item" data-component-props="onClick={this.props.handleCloseClick}" style="position:absolute;top:10px;right:10px" >
+                        <i class="close icon" data-component-props="style={this.props.close_style}"></i>
+                    </a>
                 </div>
                 <div class="classes.menu_user_container">
                     <div class="classes.menu_user_logo">
