fixed mobile issues in individual

--- a/content_builder/src/html/themes/individual/IndividualMobilePageComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualMobilePageComponent.html
@@ -26,8 +26,8 @@
         <div data-component-name="IndividualPageComponent" class="">
             <div class="classes.individual_mobile_bg">
                 <div class="classes.individual_mobile_inner_bg">
-                    <div class="classes.individual_header">
-                        <img data-component-props="src={this.props.bannerImageUrl}" class="classes.individual_header_image" src="./../../images/profile-bannerbg.jpg" />
+                    <div class="classes.individual_mobile_header">
+                        <img data-component-props="src={this.props.bannerImageUrl}" class="classes.individual_mobile_header_image" src="./../../images/profile-bannerbg.jpg" />
                         <div data-component-props="onClick={this.props.handleEditClick} style={this.props.button_style}" id="edit_button" class="classes.individual_edit_button">
                             Edit
                         </div>
