update card wip

--- a/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminMenuComponent.html
@@ -65,6 +65,16 @@
                         </div>
                     </div>
                 </a>
+                <a class="item" data-component-props="style={this.props.update_card_style} onClick={(e)=>{this.props.handleMainMenuClick('update_card', e);}}">
+                    <div class="classes.menu_item">
+                        <div class="classes.menu_item_icon">
+                            <i class="credit card outline icon"></i>
+                        </div>
+                        <div class="classes.menu_item_label">
+                            Update Payment Card
+                        </div>
+                    </div>
+                </a>
                  <div data-component-value="{this.props.paywall_content}">
                     paywall_content
                 </div>
