fixes for felzec nav

--- a/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/felzec/light/OrganizationNavComponent.html
@@ -22,39 +22,41 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="light_OrganizationNavComponent" class="classes.felzec_nav_constraint">
-            <div class="ui stackable three column grid" style="padding:0px">
-                <div class="seven wide column" style="padding:0px">
-                    <div class="classes.obliviot_light_social_menu_container">
-                        <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link1}">
-                            <i class="fa fa-instagram"></i>
-                        </div>
-                        <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link2}">
-                            <i class="fa fa-twitter"></i>
-                        </div>
-                        <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link3}">
-                            <i class="fa fa-youtube"></i>
-                        </div>
-                        <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link4}">
-                            <i class="fa fa-twitch"></i>
-                        </div>
-                        <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link5}">
-                            <i class="fa fa-instagram"></i>
-                        </div>
-                        <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link6}">
-                            <i class="fab fa-discord"></i>
+        <div data-component-name="light_OrganizationNavComponent">
+            <div class="classes.felzec_nav_constraint">
+                <div class="ui stackable three column grid" style="padding:0px">
+                    <div class="seven wide column" style="padding:0px">
+                        <div class="classes.obliviot_light_social_menu_container">
+                            <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link1}">
+                                <i class="fa fa-instagram"></i>
+                            </div>
+                            <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link2}">
+                                <i class="fa fa-twitter"></i>
+                            </div>
+                            <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link3}">
+                                <i class="fa fa-youtube"></i>
+                            </div>
+                            <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link4}">
+                                <i class="fa fa-twitch"></i>
+                            </div>
+                            <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link5}">
+                                <i class="fa fa-instagram"></i>
+                            </div>
+                            <div class="classes.felzec_light_social_menu_item" data-component-value="{this.props.social_link6}">
+                                <i class="fab fa-discord"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="two wide column" style="padding:0px">
-                    <div class="classes.felzec_light_nav_logo_holder">
-                        <img class="classes.felzec_light_nav_logo" data-component-props="src={this.props.nav_logo}" />
+                    <div class="two wide column" style="padding:0px">
+                        <div class="classes.felzec_light_nav_logo_holder">
+                            <img class="classes.felzec_light_nav_logo" data-component-props="src={this.props.nav_logo}" />
+                        </div>
                     </div>
-                </div>
-                <div class="seven wide column" style="padding:0px">
-                    <div class="classes.obliviot_nav_right">
-                        <div class="classes.felzec_light_navicon_menu_item" data-component-value="{this.props.navicon}">
-                            <i class="fa fa-navicon"></i>
+                    <div class="seven wide column" style="padding:0px">
+                        <div class="classes.obliviot_nav_right">
+                            <div class="classes.felzec_light_navicon_menu_item" data-component-value="{this.props.navicon}">
+                                <i class="fa fa-navicon"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
