--- a/content_builder/src/html/themes/enigma2/dark/OrganizationBlogComponent.html
+++ b/content_builder/src/html/themes/enigma2/dark/OrganizationBlogComponent.html
@@ -26,9 +26,9 @@
             </div>
             <div class="classes.enigma2_blog_inner_container">
                 <div class="ui stackable two column grid">
-                    <div class="eleven wide column" style="padding-right: 0px; overflow:auto;">
+                    <div class="twelve wide column" style="padding-right: 0px; overflow:auto;">
                         <div class="classes.enigma2_lightBlogMaxContainer" data-component-props="style={this.props.main_blog1} onClick={()=>{this.props.handleNewsClick(this.props.blog_1);}}">
-                            <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
+                            <img class="classes.enigma2_main_news_item_image" data-component-props="src={this.props.blog_media_1}" src="../images/news_test_1.jpg" />    
                             <div class="classes.enigma2_dark_main_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 50px; overflow-y: hidden;text-overflow: ellipsis;">
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="classes.enigma2_lightBlogMaxContainer" data-component-props="style={this.props.main_blog2} onClick={()=>{this.props.handleNewsClick(this.props.blog_2);}}">
-                            <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_test_1.jpg" />    
+                            <img class="classes.enigma2_main_news_item_image" data-component-props="src={this.props.blog_media_2}" src="../images/news_test_1.jpg" />    
                             <div class="classes.enigma2_dark_main_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 50px; overflow-y: hidden;text-overflow: ellipsis;">
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                         <div class="classes.enigma2_lightBlogMaxContainer" data-component-props="style={this.props.main_blog3} onClick={()=>{this.props.handleNewsClick(this.props.blog_3);}}">
-                            <img class="classes.felzec_main_news_item_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_test_1.jpg" />    
+                            <img class="classes.enigma2_main_news_item_image" data-component-props="src={this.props.blog_media_3}" src="../images/news_test_1.jpg" />    
                             <div class="classes.enigma2_dark_main_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 50px; overflow-y: hidden;text-overflow: ellipsis;">
@@ -72,9 +72,9 @@
                             <div class="classes.enigma2_blog_switch" data-component-props="onClick={()=>{this.props.handleSwitchClick3();}} style={this.props.blog_switch3}"></div>
                         </div>
                     </div>
-                    <div class="five wide column" style="padding-left: 0px">
+                    <div class="four wide column" style="padding-left: 0px">
                         <div class="classes.enigma2_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_4);}}">
-                            <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_4}" src="../images/news_mini_image.jpg" />    
+                            <img class="classes.enigma2_main_news_item_mini_image" data-component-props="src={this.props.blog_media_4}" src="../images/news_mini_image.jpg" />    
                             <div class="classes.enigma2_dark_mini_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 30px; overflow-y: hidden;text-overflow: ellipsis;">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="classes.enigma2_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_5);}}">
-                            <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_5}" src="../images/news_mini_image.jpg" />    
+                            <img class="classes.enigma2_main_news_item_mini_image" data-component-props="src={this.props.blog_media_5}" src="../images/news_mini_image.jpg" />    
                             <div class="classes.enigma2_dark_mini_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 30px; overflow-y: hidden;text-overflow: ellipsis;">
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="classes.enigma2_lightBlogMiniContainer" data-component-props="onClick={()=>{this.props.handleNewsClick(this.props.blog_6);}}">
-                            <img class="classes.felzec_main_news_item_mini_image" data-component-props="src={this.props.blog_media_6}" src="../images/news_mini_image.jpg" />    
+                            <img class="classes.enigma2_main_news_item_mini_image" data-component-props="src={this.props.blog_media_6}" src="../images/news_mini_image.jpg" />    
                             <div class="classes.enigma2_dark_mini_news_content_container">
                                 <div>
                                     <div style="width: 100%;height: 30px; overflow-y: hidden;text-overflow: ellipsis;">
